--- a/trunk/skin/frontend/smartwave/porto/css/header/type20.css
+++ b/trunk/skin/frontend/smartwave/porto/css/header/type20.css
@@ -1,4 +1,4 @@
-.header-container.type20 {border:0;background-color:#0088cc}
+.header-container.type20 {border:0;background-color:#48a6dd;}
 .header-container.type20 .header .logo{margin: 17.5px 40px 17.5px 0;}
 .header-container.type20 .header-wrapper{background-color:#fff;box-shadow: 0 1px 5px 0px rgba(0, 0, 0, 0.1);}
 .header-container.type20.sticky-header .main-nav {margin: 0 auto;}
