--- a/trunk/app/design/frontend/smartwave/porto/template/catalog/category/view.phtml
+++ b/trunk/app/design/frontend/smartwave/porto/template/catalog/category/view.phtml
@@ -18,16 +18,19 @@
     <?php endif; ?>
     <h1><?php echo $_helper->categoryAttribute($_category, $_category->getName(), 'name') ?></h1>
 </div>
-
+<div class="category_description">
+    <?php echo $_category->getDescription(); ?>
+</div>
 <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
 
 <?php if($this->isContentMode()): ?>
+
     <?php echo $this->getCmsBlockHtml() ?>
 
 <?php elseif($this->isMixedMode()): ?>
     <?php echo $this->getCmsBlockHtml() ?>
     <?php echo $this->getProductListHtml() ?>
-
 <?php else: ?>
+
     <?php echo $this->getProductListHtml() ?>
 <?php endif; ?>
