--- a/trunk/skin/frontend/smartwave/porto/css/custom.css
+++ b/trunk/skin/frontend/smartwave/porto/css/custom.css
@@ -25,6 +25,40 @@
     margin-top: 11px;
     margin-right: 15px;
 }
+
+.category_description
+{
+  padding:30px 0;
+}
+.category_description h2
+{
+  font-size: 26px;
+  margin-top: 10px;
+  text-align: left;
+  font-family: 'Montserrat';
+  font-weight: 600;
+  color: #D90000;
+}
+.category_description h5
+{
+  margin-top: 20px;
+  font-size: 20px;
+  text-align: left;
+  font-family: 'Montserrat';
+  font-weight: 600;
+}
+.category_description ul
+{
+  text-align: center;
+}
+
+.category_description ul li
+{
+  display: inline-block;
+  padding: 1.5rem;
+  font-size: 16px;
+
+}
 /*---*/
 
 .owl-top-narrow #category-slider-demo-7 .owl-controls{right:-2px}
