--- a/trunk/skin/frontend/smartwave/porto/css/custom.css
+++ b/trunk/skin/frontend/smartwave/porto/css/custom.css
@@ -58,9 +58,21 @@ body,
 {
     margin-bottom: 2rem;
 }
+.mb-3
+{
+    margin-bottom: 3rem;
+}
 .mb-5
 {
     margin-bottom:5rem;
+}
+.mt-3
+{
+    margin-top:3rem;
+}
+.mt-5
+{
+    margin-top:5rem;
 }
 
 /*==CUSTOM STYLE===*/
