--- a/trunk/skin/frontend/smartwave/porto/css/custom.css
+++ b/trunk/skin/frontend/smartwave/porto/css/custom.css
@@ -76,22 +76,21 @@ body,
 }
 
 /*==CUSTOM STYLE===*/
-
+.item .item-area .actions input.qty {
+    margin:0;
+    height: 43px;
+}
+.btn-default{
+    margin-bottom: 1rem;
+}
 .btn-default:hover, .btn-default:focus {
     background-color: #161616;
     opacity: 1;
-}select {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    -ms-appearance: none;
-    appearance: none;
-    border: 1px solid #e4e4e4;
-    height: 37px;
-    background: #fff url(../../images/select-bg.svg) no-repeat 100% 48%;
-    background-size: 30px 60px;
-    padding-right: 25px;
-    text-indent: .01em;
-    text-overflow: '';
+}
+.actions select
+{
+    width: 100%;
+    text-align: center;
 }
 #newsletter_popup {
     display: none;
